<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    tools:context=".SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/rounded"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:radius="20dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="70dp"
        android:text="@string/alreadyhaveanaccount"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/clicksignin"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="70dp"
        android:clickable="true"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/signupPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/rounded"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/signcnfpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/rounded"
        android:hint="@string/cnfpwd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000" />


    <Button
        android:id="@+id/submitButtonsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/signupButton"
        android:textAllCaps="false"
        android:background="@drawable/button_round"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="110dp"
        android:text="@string/or" />



</RelativeLayout>